envs/dev/vs-patch.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: hello
spec:
  http:
  - name: http
    route:
    - destination:
        host: hello-stable-dev.mesh-lab-dev.svc.cluster.local
        port:
          number: 80
      weight: 100
    - destination:
        host: hello-canary-dev.mesh-lab-dev.svc.cluster.local
        port:
          number: 80
      weight: 0
